# ChangeLog for net-zope/zope
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-zope/zope/ChangeLog,v 1.169 2010/04/12 12:38:35 fauli Exp $

  12 Apr 2010; Christian Faulhammer <fauli@gentoo.org> zope-2.9.12.ebuild:
  stable x86, security bug 313337

*zope-2.12.4 (07 Apr 2010)

  07 Apr 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +zope-2.12.4.ebuild:
  Version bump.

*zope-2.10.11 (07 Apr 2010)
*zope-2.9.12 (07 Apr 2010)

  07 Apr 2010; Alfredo Tupone <tupone@gentoo.org> +zope-2.9.12.ebuild,
  +zope-2.10.11.ebuild:
  Fixing vulnerability on version 2.9 and 2.10 as per bug #31337 by
  craig@gentoo.org

  14 Feb 2010; Raúl Porcel <armin76@gentoo.org> zope-2.12.3.ebuild:
  Add ~alpha/~sparc wrt #297734

  10 Feb 2010; Torsten Veller <tove@gentoo.org> zope-2.12.2.ebuild,
  zope-2.12.3.ebuild:
  Add missing die: || "..." -> || die "..."

*zope-2.12.3 (18 Jan 2010)

  18 Jan 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +zope-2.12.3.ebuild:
  Version bump.

  16 Jan 2010; Christian Faulhammer <fauli@gentoo.org> zope-2.12.2.ebuild:
  keyworded ~arch for x86, bug 297734

*zope-2.12.2 (24 Dec 2009)

  24 Dec 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +zope-2.12.2.ebuild, +files/zope-2.12.2-fix_syntax_error.patch:
  Version bump.

*zope-2.12.1 (13 Dec 2009)

  13 Dec 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +zope-2.12.1.ebuild, +files/zope-2.12.1-fix_build.patch:
  Version bump (bug #287188).

  11 Sep 2009; Markus Meier <maekke@gentoo.org> zope-2.9.10-r1.ebuild,
  zope-2.10.7-r1.ebuild:
  amd64 stable, bug #278824

*zope-2.10.9 (04 Sep 2009)

  04 Sep 2009; Alfredo Tupone <tupone@gentoo.org> +zope-2.10.9.ebuild:
  Version bump to 2.10.9

  25 Aug 2009; Raúl Porcel <armin76@gentoo.org> zope-2.9.10-r1.ebuild,
  zope-2.10.7-r1.ebuild:
  sparc stable wrt #278824
