@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-zope/zope/zope-2.9.12.ebuild,v 1.1 2010/04/07 12:47:59 tupone Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-zope/zope/zope-2.9.12.ebuild,v 1.2 2010/04/12 12:38:35 fauli Exp $
 EAPI=2
 
 inherit eutils multilib
@@ -11,7 +11,7 @@ SRC_URI="http://www.zope.org/Products/Zope/${PV}/Zope-${PV}-final.tgz"
 
 LICENSE="ZPL"
 SLOT="${PV}"
-KEYWORDS="~alpha ~amd64 ~ppc ~sparc ~x86"
+KEYWORDS="~alpha ~amd64 ~ppc ~sparc x86"
 IUSE=""
 
 DEPEND="=dev-lang/python-2.4*"
