@@ -1,6 +1,9 @@
 # ChangeLog for net-zope/zope
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-zope/zope/ChangeLog,v 1.169 2010/04/12 12:38:35 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-zope/zope/ChangeLog,v 1.170 2010/04/12 12:40:18 fauli Exp $
+
+  12 Apr 2010; Christian Faulhammer <fauli@gentoo.org> zope-2.10.11.ebuild:
+  stable x86, security bug 313337
 
   12 Apr 2010; Christian Faulhammer <fauli@gentoo.org> zope-2.9.12.ebuild:
   stable x86, security bug 313337
